# Scrape-mail

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  credentials.example.json  main.py  main_draft.py  setup.cfg
scrapemail/: __init__.py  core.py  imap_wrapper.py  utility.py
src/: core.py  imap_wrapper.py
tests/: test_core.py  test_utility.py
