[metadata]
name = Scrape-mail
version = attr: scrapemail.__version__
author = Cristiano Salerno
author_email = cristianosalerno1@gmail.com
description = A software that enables attachments download from an imap connection
license = MIT
classifiers =
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.7
packages = find:

[flake8]
exclude = .git,.tox,venv_temp
extend-ignore = E203
max-line-length = 99

[isort]
profile = black
